--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ padding:30px;
   var password=document.getElementById("passwordbox")
   var passwordtext= password.value
   if(passwordtext=="sushimonster") {
-    window.location = "file:///Users/ntaft/Desktop/ZEV%20KODING!!!!!!!!!!!!!!!!!!!/Blastro.net%20TAKE%20OFF%20TO%20THE%20STARS!.htm"
+    window.location = "/Blastro.net%20TAKE%20OFF%20TO%20THE%20STARS!.htm"
     return true;
 }
 alert("Access denied! Incorrect password!");
