--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <title>Password</title>
 <style>
-body{
-background -color:blue
-padding:30px;
+body {
+background-color: blue;
+padding: 30px;
 }
 </style>
 </head>
