added password hint

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ padding: 30px;
       window.location = "/Blastro.net%20TAKE%20OFF%20TO%20THE%20STARS!.htm"
       return true;
     }
-    alert("Access denied! Incorrect password!");
+    alert("Access denied! Incorrect password!The password is sushimonster");
     password.value = "";
     return false;
   }
