added logout feature

--- a/blastro.html
+++ b/blastro.html
@@ -5,7 +5,7 @@
   <body>
     <div style="color: red;">
       <div style="background-color: green;">
-      
+
 <p>Hi people! Lets play! (If you are under 2 years you are too young for this website!)</p>
 </div>
 </div>
@@ -18,6 +18,15 @@
   <p>{If your Flash is not working,press this cyclone}</p>
   <a href="file:///Users/ntaft/Desktop/ZEV%20KODING!!!!!!!!!!!!!!!!!!!/blahblahblah%20koding.html#" onclick="alert(&#39;Reloaded!&#39;)"><img src="./Blastro.net TAKE OFF TO THE STARS!_files/cyclone.gif" alt=""></a>
 <a href="https://www.wikipedia.org/"><img src="./Blastro.net TAKE OFF TO THE STARS!_files/wiki.jpg" alt="">
-  
 
-</a></body></html>
+</a>
+
+<script>
+  document.querySelector('body').addEventListener('keydown', (e) => {
+      if (e.key === 'z') {
+        alert('You have been logged out')
+        window.location = "index.html"
+      }
+  })
+</script>
+</body></html>
